--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
+
+    <!-- ICONS -->
     
+
     <title>Caculadora</title>
 </head>
 <body>
+
     <div class="calculadora-conteiner">
         <div class="visor-conteiner"> 
             <label class="visor" type="text" name="visor" id="visor-result"></label>
